--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://hariharan:chromastone12@cluster0.y4g2ask.mongodb.net/knowledgenexus
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://knowledgenexus.vercel.app
 
 JWT_SECRET=zC4CtKpdzgTNlDa00V365zKa
 
